force-app/main/default/objects/Mi_moto__c/Mi_moto__c.object-meta.xml
<CustomObject>
    <label>Mi moto</label>
    <nameField>
        <label>Mi moto Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mis motos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>