force-app/main/default/objects/Mi_moto__c/fields/Modelo__c.field-meta.xml
<CustomField>
    <fullName>Modelo__c</fullName>
    <label>Modelo</label>
    <referenceTo>Modelo__c</referenceTo>
    <relationshipLabel>Mis motos</relationshipLabel>
    <relationshipName>Mis_motos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>