force-app/main/default/objects/Mi_moto__c/fields/Proxima_Revision__c.field-meta.xml
<CustomField>
    <fullName>Proxima_Revision__c</fullName>
    <label>Proxima Revision</label>
    <type>Date</type>
</CustomField>