force-app/main/default/objects/Mi_moto__c/fields/Proximo_Cambio_De_Aceite__c.field-meta.xml
<CustomField>
    <fullName>Proximo_Cambio_De_Aceite__c</fullName>
    <label>Proximo Cambio De Aceite</label>
    <type>Date</type>
</CustomField>