force-app/main/default/objects/Mi_moto__c/fields/Ultima_Revision__c.field-meta.xml
<CustomField>
    <fullName>Ultima_Revision__c</fullName>
    <label>Ultima Revision</label>
    <required>true</required>
    <type>Date</type>
</CustomField>