force-app/main/default/objects/Mi_moto__c/fields/Ultimo_Cambio_De_Aceite__c.field-meta.xml
<CustomField>
    <fullName>Ultimo_Cambio_De_Aceite__c</fullName>
    <label>Ultimo Cambio De Aceite</label>
    <required>true</required>
    <type>Date</type>
</CustomField>